unpackaged/main/default/objects/datamask__Object_Metadata__mdt/datamask__Object_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>Object Metadata</label>
    <pluralLabel>Object Metadata</pluralLabel>
</CustomObject>