unpackaged/main/default/objects/datamask__Object_Metadata__mdt/fields/datamask__API_Name__c.field-meta.xml
<CustomField>
    <fullName>datamask__API_Name__c</fullName>
    <label>API Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>