unpackaged/main/default/objects/datamask__Object_Metadata__mdt/fields/datamask__Id__c.field-meta.xml
<CustomField>
    <fullName>datamask__Id__c</fullName>
    <label>Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>