unpackaged/main/default/objects/datamask__Object_Metadata__mdt/fields/datamask__Masking_Object__c.field-meta.xml
<CustomField>
    <fullName>datamask__Masking_Object__c</fullName>
    <label>Masking Object</label>
    <referenceTo>datamask__Masking_Object__mdt</referenceTo>
    <relationshipLabel>Object Metadata</relationshipLabel>
    <relationshipName>Object_Metadata</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>