unpackaged/main/default/objects/datamask__Object_Metadata__mdt/fields/datamask__Type__c.field-meta.xml
<CustomField>
    <fullName>datamask__Type__c</fullName>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>