unpackaged/main/default/objects/datamask__Object_Metadata__mdt/fields/datamask__Version_Number__c.field-meta.xml
<CustomField>
    <fullName>datamask__Version_Number__c</fullName>
    <description>Used for process deactivation/reactivation</description>
    <label>Version Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>